--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=FinancialHub
+spring.datasource.url=jdbc:h2:mem:financial
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+
+
+
+# Dialecto específico de Hibernate para H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Configuración de Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+# Configuración de la consola H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Mostrar consultas SQL en la consola
+spring.jpa.show-sql=true
+
+# Formatear las consultas SQL para que sean más legibles
+spring.jpa.properties.hibernate.format_sql=true
